tests/lean/partialSyntaxTraces.lean
/-! Partial syntax should not suppress trace output. -/

set_option pp.rawOnError true
set_option trace.Elab.command true
def f
